# teaching-shop-example

./: README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  ghcr.yml
backend/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  ruff.toml
backend/core/api/: admin.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/core/api/management/commands/: seed_orders.py  seed_products.py
backend/core/api/migrations/: 0001_initial.py  0002_alter_product_imageurl.py  0003_order.py  0003_product_category.py  0003_review.py  0003_sitesettings.py
backend/core/api/tests/: test_admin.py  test_auth.py  test_orders.py
frontend/: .dockerignore  Dockerfile  Dockerfile.v2  docker-compose.yml  package-lock.json  package.json
frontend/src/: App.tsx  Products.tsx  main.tsx
frontend/src/api/: carriers.ts  products.ts  reviews.ts  settings.ts
frontend/src/components/: CategorySection.tsx  OrdersDisabledBanner.tsx  ProductCard.tsx  ReviewsSection.tsx
frontend/src/contexts/: ProductsContext.tsx
frontend/src/pages/: HomePage.tsx
lesson-3-part-1/: SUBJECT1.md
